--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ nav ul li a:hover {
 
 /* About Me Section with Background Image */
 #about-me {
-    background-image: url('images/brandon.jpg'); /* Replace with your image path on GitHub */
+    background-image: url('C:\Users\DELL\Desktop\Rems\Brandon\brandon.jpg'); /* Replace with your image path on GitHub */
     background-size: cover;
     background-position: center;
     color: white;
