--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@ header nav ul li {
 
 .about-container {
     position: relative;
-    background-image: url('https://images.unsplash.com/photo-1604313101606-31832a8b0584');
+    background-image: url('https://freerangestock.com/sample/128305/back-side-view-of-man-at-beach-.jpg');
     background-size: cover;
     background-position: center;
     height: 400px; /* Adjust the height as needed */
